--- a/config.yml
+++ b/config.yml
@@ -120,7 +120,7 @@ menu:
       url: about/
       weight: 1
     - name: Posts
-      url: posts
+      url: /posts/
       weight: 2
     - name: Projects
       url: projects/
