--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://abdullahdurrani.com"
+baseURL: "https://abdullahdurrani.netlify.app/"
 title: Abdullah Durrani
 paginate: 5
 theme: PaperMod
